--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>REST Countries EH</title>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
+      as="style"
+      onload="this.onload=null; 
+              this.rel='stylesheet'"
+    />
   </head>
   <body>
     <div id="app"></div>
